--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "aws-sdk": "^2.4.6",
     "body-parser": "^1.15.2",
     "btoa": "^1.1.2",
+    "moment": "^2.14.1",
     "restify": "^4.1.1",
     "uuid": "^2.0.2"
   }
