--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "spot-request",
   "version": "1.0.0",
   "description": "aws, spot, restify, ec2",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,5 +29,9 @@
     "moment": "^2.14.1",
     "restify": "^4.1.1",
     "uuid": "^2.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^3.1.0",
+    "eslint-config-google": "^0.6.0"
   }
 }
